Fixed z-index bug and using backdrop-filter to create contrast when modal is open

--- a/src/scss/components/_help-section-button.scss
+++ b/src/scss/components/_help-section-button.scss
@@ -2,6 +2,7 @@
   position: fixed;
   right: $app-padding-x;
   bottom: $app-padding-y;
+  z-index: 150;
 
   > button {
     svg {
